--- a/package.json
+++ b/package.json
@@ -8,19 +8,41 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.2",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.8",
+    "@react-navigation/drawer": "^5.12.4",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
     "expo": "~40.0.0",
+    "expo-linear-gradient": "^9.0.0",
     "expo-status-bar": "~1.0.3",
+    "formik": "^2.2.6",
+    "modal-react-native-web": "^0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-element": "^1.2.1",
+    "react-native-elements": "^3.3.0",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-localization": "^2.1.6",
+    "react-native-reanimated": "^2.0.0-rc.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "^2.18.1",
+    "react-native-touchable-scale": "^2.1.2",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-web": "~0.13.12",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
-    "@types/react": "~16.9.35",
+    "@types/jest": "^26.0.20",
+    "@types/react": "^17.0.3",
     "@types/react-dom": "~16.9.8",
-    "@types/react-native": "~0.63.2",
-    "typescript": "~4.0.0"
+    "@types/react-native": "^0.63.51",
+    "@types/react-test-renderer": "^17.0.1",
+    "typescript": "^4.2.3"
   },
   "private": true
 }
