--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "@types/react-native-modal-dropdown": "^0.7.0",
     "expo": "~40.0.0",
     "expo-linear-gradient": "^9.0.0",
     "expo-status-bar": "~1.0.3",
@@ -27,12 +28,17 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-localization": "^2.1.6",
+    "react-native-material-menu": "^1.2.0",
+    "react-native-modal-dropdown": "^1.0.0",
+    "react-native-paper": "^4.7.2",
+    "react-native-popup-menu": "^0.15.10",
     "react-native-reanimated": "^2.0.0-rc.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "^2.18.1",
     "react-native-touchable-scale": "^2.1.2",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
+    "react-navigation-stack": "^2.10.4",
     "yup": "^0.32.9"
   },
   "devDependencies": {
