--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-touchable-scale": "^2.1.2",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "yup": "^0.32.9"
   },
