--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
+    "@microsoft/signalr": "^5.0.4",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "@types/react-native-modal-dropdown": "^0.7.0",
+    "axios": "^0.21.1",
+    "date-fns": "^2.19.0",
     "expo": "~40.0.0",
     "expo-linear-gradient": "^9.0.0",
     "expo-status-bar": "~1.0.3",
     "formik": "^2.2.6",
+    "mobx": "^6.1.8",
     "modal-react-native-web": "^0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
