--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-linear-gradient": "^9.0.0",
     "expo-status-bar": "~1.0.3",
     "formik": "^2.2.6",
+    "jwt-decode": "^3.1.2",
     "mobx": "^6.1.8",
     "modal-react-native-web": "^0.2.0",
     "react": "16.13.1",
@@ -44,6 +45,7 @@
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
+    "react-scripts": "^4.0.3",
     "yup": "^0.32.9"
   },
   "devDependencies": {
